force-app/main/default/objects/Macro_Site_Staging__c/Macro_Site_Staging__c.object-meta.xml
<CustomObject>
    <label>Macro Site Staging</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Macro Site Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>