force-app/main/default/objects/Macro_Site_Staging__c/fields/A4880_RAN_Wilt_Complete_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4880_RAN_Wilt_Complete_Finish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4880 RAN Wilt Complete Finish</label>
    <type>Date</type>
</CustomField>