force-app/main/default/objects/Macro_Site_Staging__c/fields/A4881_RAN_Lg_Disconn_Macro_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4881_RAN_Lg_Disconn_Macro_Finish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4881 RAN Lg Disconn Macro Finish</label>
    <type>Date</type>
</CustomField>