force-app/main/default/objects/Macro_Site_Staging__c/fields/A4882_Bckhaul_Lg_Discon_Decom_Finish__c.field-meta.xml
<CustomField>
    <fullName>A4882_Bckhaul_Lg_Discon_Decom_Finish__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>A4882 Bckhaul Lg Discon Decom Finish</label>
    <type>Date</type>
</CustomField>