force-app/main/default/objects/Macro_Site_Staging__c/fields/ADM_Best_Estimate_Timing_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Best_Estimate_Timing_Date__c</fullName>
    <description>List Project: BVELU: 03/03/2021 - Field Type changed from Text to Date</description>
    <label>ADM Best Estimate Timing Date</label>
    <type>Date</type>
</CustomField>