force-app/main/default/objects/Macro_Site_Staging__c/fields/ADM_Justification__c.field-meta.xml
<CustomField>
    <fullName>ADM_Justification__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>ADM Justification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>