force-app/main/default/objects/Macro_Site_Staging__c/fields/ADM_JustificationComments__c.field-meta.xml
<CustomField>
    <fullName>ADM_JustificationComments__c</fullName>
    <label>ADM JustificationComments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>