force-app/main/default/objects/Macro_Site_Staging__c/fields/ADM_NationalLeaseResponse__c.field-meta.xml
<CustomField>
    <fullName>ADM_NationalLeaseResponse__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>ADM NationalLeaseResponse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>