force-app/main/default/objects/Macro_Site_Staging__c/fields/ADM_NationalRFDisposition__c.field-meta.xml
<CustomField>
    <fullName>ADM_NationalRFDisposition__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>ADM NationalRFDisposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>