force-app/main/default/objects/Macro_Site_Staging__c/fields/ADM_Region_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Region_Sign_Off_Date__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>ADM Region Sign Off Date</label>
    <type>Date</type>
</CustomField>