force-app/main/default/objects/Macro_Site_Staging__c/fields/Batch_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_Status__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Batch Process Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>