force-app/main/default/objects/Macro_Site_Staging__c/fields/BKL_Vetted_For_Decom_SignOffDate__c.field-meta.xml
<CustomField>
    <fullName>BKL_Vetted_For_Decom_SignOffDate__c</fullName>
    <description>List Project: BVELU: 03/01/2021</description>
    <label>BKL Vetted For Decom SignOffDate</label>
    <type>Date</type>
</CustomField>