force-app/main/default/objects/Macro_Site_Staging__c/fields/Close_Out_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Complete_Date__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Close Out Complete Date</label>
    <type>Date</type>
</CustomField>