force-app/main/default/objects/Macro_Site_Staging__c/fields/F4880_RAN_Wilt_Complete_Finish__c.field-meta.xml
<CustomField>
    <fullName>F4880_RAN_Wilt_Complete_Finish__c</fullName>
    <label>F4880 RAN Wilt Complete Finish</label>
    <type>Date</type>
</CustomField>