force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_DIS_Tranche__c.field-meta.xml
<CustomField>
    <fullName>FDS_DIS_Tranche__c</fullName>
    <label>FDS DIS Tranche</label>
    <length>100</length>
    <type>Text</type>
</CustomField>