force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>FDS_Geo_Region__c</fullName>
    <label>FDS Geo Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>