force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_LEA_Current_Monthly_Lease_Rent_Amt__c.field-meta.xml
<CustomField>
    <fullName>FDS_LEA_Current_Monthly_Lease_Rent_Amt__c</fullName>
    <label>FDS LEA Current Monthly Lease Rent Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>