force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_LEA_Primary_Lease_Cur_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>FDS_LEA_Primary_Lease_Cur_Monthly_Rent__c</fullName>
    <label>FDS LEA Primary Lease Cur Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>