force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Physical_Decom_Binding_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_Physical_Decom_Binding_Date__c</fullName>
    <label>FDS Physical Decom Binding Date</label>
    <type>Date</type>
</CustomField>