force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_POR_Status__c.field-meta.xml
<CustomField>
    <fullName>FDS_POR_Status__c</fullName>
    <label>FDS POR Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>