force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_RF_Shutdown_Binding_Flag__c.field-meta.xml
<CustomField>
    <fullName>FDS_RF_Shutdown_Binding_Flag__c</fullName>
    <label>FDS RF Shutdown Binding Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>