force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_ring_cd__c.field-meta.xml
<CustomField>
    <fullName>FDS_ring_cd__c</fullName>
    <label>FDS ring cd</label>
    <length>100</length>
    <type>Text</type>
</CustomField>