force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Ring_Mkt_Name__c.field-meta.xml
<CustomField>
    <fullName>FDS_Ring_Mkt_Name__c</fullName>
    <label>FDS Ring Mkt Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>