force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Site_On_Air_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_Site_On_Air_Date__c</fullName>
    <label>FDS Site On Air Date</label>
    <type>Date</type>
</CustomField>