force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Siterra_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_Siterra_End_Date__c</fullName>
    <label>FDS Siterra End Date</label>
    <type>Date</type>
</CustomField>