force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Sprint_Site_Decommissioned_Status__c.field-meta.xml
<CustomField>
    <fullName>FDS_Sprint_Site_Decommissioned_Status__c</fullName>
    <label>FDS Sprint Site Decommissioned Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>