force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_Sprint_Transmission_Ended_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_Sprint_Transmission_Ended_Date__c</fullName>
    <label>FDS Sprint Transmission Ended Date</label>
    <type>Date</type>
</CustomField>