force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_SV_SubjectToDivestiture__c.field-meta.xml
<CustomField>
    <fullName>FDS_SV_SubjectToDivestiture__c</fullName>
    <label>FDS SV SubjectToDivestiture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>