force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_TMO_Trmsn_Ended_Site_Off_Air_Date__c.field-meta.xml
<CustomField>
    <fullName>FDS_TMO_Trmsn_Ended_Site_Off_Air_Date__c</fullName>
    <label>FDS TMO Trmsn Ended Site Off Air Date</label>
    <type>Date</type>
</CustomField>