force-app/main/default/objects/Macro_Site_Staging__c/fields/FDS_TMO_Trmsn_Ended_Site_Off_Air_Status__c.field-meta.xml
<CustomField>
    <fullName>FDS_TMO_Trmsn_Ended_Site_Off_Air_Status__c</fullName>
    <label>FDS TMO Trmsn Ended Site Off Air Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>