force-app/main/default/objects/Macro_Site_Staging__c/fields/Forced_Removal__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal__c</fullName>
    <description>Added for List Project.BVELU. 02/08/2021</description>
    <label>Forced Removal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>