force-app/main/default/objects/Macro_Site_Staging__c/fields/Forecast_Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Disconnect_Date__c</fullName>
    <description>Forecast Disconnect Date</description>
    <label>Forecast Disconnect Date</label>
    <type>Date</type>
</CustomField>