force-app/main/default/objects/Macro_Site_Staging__c/fields/Forecasted_Logical_Decomm_status__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Logical_Decomm_status__c</fullName>
    <description>List Project. 02/28/2021. BVELU</description>
    <label>Forecasted Logical Decomm status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>