force-app/main/default/objects/Macro_Site_Staging__c/fields/Gate_Combination__c.field-meta.xml
<CustomField>
    <fullName>Gate_Combination__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Gate Combination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>