force-app/main/default/objects/Macro_Site_Staging__c/fields/Lattitude__c.field-meta.xml
<CustomField>
    <fullName>Lattitude__c</fullName>
    <label>Lattitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>