force-app/main/default/objects/Macro_Site_Staging__c/fields/Macro_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Macro_Site_ID__c</fullName>
    <label>Macro Site ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>