force-app/main/default/objects/Macro_Site_Staging__c/fields/Market_Legacy_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Market_Legacy_Sprint__c</fullName>
    <label>Market (Legacy Sprint)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>