force-app/main/default/objects/Macro_Site_Staging__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>