force-app/main/default/objects/Macro_Site_Staging__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <label>Property Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>