force-app/main/default/objects/Macro_Site_Staging__c/fields/Rad_Center_ft__c.field-meta.xml
<CustomField>
    <fullName>Rad_Center_ft__c</fullName>
    <label>Rad Center (ft)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>