force-app/main/default/objects/Macro_Site_Staging__c/fields/Remove_Equipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Remove_Equipment_Date__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Remove Equipment Date</label>
    <type>Date</type>
</CustomField>