force-app/main/default/objects/Macro_Site_Staging__c/fields/Request_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Request_Confirmation__c</fullName>
    <description>Request Confirmation</description>
    <label>Request Confirmation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>