force-app/main/default/objects/Macro_Site_Staging__c/fields/Requested_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Close_Date__c</fullName>
    <description>Requested Close Date</description>
    <label>Requested Close Date</label>
    <type>Date</type>
</CustomField>