force-app/main/default/objects/Macro_Site_Staging__c/fields/Sensitive_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Landlord__c</fullName>
    <label>Sensitive Landlord</label>
    <length>100</length>
    <type>Text</type>
</CustomField>