force-app/main/default/objects/Macro_Site_Staging__c/fields/Site_Access_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Procedure__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Site Access Procedure</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>