force-app/main/default/objects/Macro_Site_Staging__c/fields/Site_Class__c.field-meta.xml
<CustomField>
    <fullName>Site_Class__c</fullName>
    <label>Site Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>