force-app/main/default/objects/Macro_Site_Staging__c/fields/Site_Decommisioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Decommisioned_Date__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Site Decommisioned Date</label>
    <type>Date</type>
</CustomField>