force-app/main/default/objects/Macro_Site_Staging__c/fields/Site_Decommisioned_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Decommisioned_Status__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Site Decommisioned Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>