force-app/main/default/objects/Macro_Site_Staging__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <label>Site Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>