force-app/main/default/objects/Macro_Site_Staging__c/fields/Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Sub-Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>