force-app/main/default/objects/Macro_Site_Staging__c/fields/T_A4842_FiberDisconnectFOCDecom__c.field-meta.xml
<CustomField>
    <fullName>T_A4842_FiberDisconnectFOCDecom__c</fullName>
    <label>T:(A 4842) Fiber Disconnect FOC Decom</label>
    <type>Date</type>
</CustomField>