force-app/main/default/objects/Macro_Site_Staging__c/fields/Utility_Account__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account__c</fullName>
    <description>Utility Account</description>
    <label>Utility Account</label>
    <length>200</length>
    <type>Text</type>
</CustomField>