force-app/main/default/objects/Macro_Site_Staging__c/fields/Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Utility_Provider__c</fullName>
    <description>Utility Provider</description>
    <label>Utility Provider</label>
    <length>200</length>
    <type>Text</type>
</CustomField>