force-app/main/default/objects/Macro_Site_Staging__c/fields/Utility_Status__c.field-meta.xml
<CustomField>
    <fullName>Utility_Status__c</fullName>
    <description>Utility Status</description>
    <label>Utility Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>